# token_proxy

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README.zh-CN.md  eslint.config.js  findings.md  index.html  notes.md  package.json  pnpm-lock.yaml  progress.md  task_plan.md  tsr.config.json  vite.config.ts  vitest.config.ts
crates/token_proxy_cli/: Cargo.toml
crates/token_proxy_cli/src/: main.rs
crates/token_proxy_core/: Cargo.toml
crates/token_proxy_core/src/: app_proxy.rs  jsonc.rs  lib.rs  logging.rs  oauth_util.rs  paths.rs  provider_accounts.rs
crates/token_proxy_core/src/antigravity/: endpoints.rs  ide.rs  ide_db.rs  login.rs  mod.rs  oauth.rs  project.rs  project.test.rs  protobuf.rs  protobuf.test.rs  quota.rs  store.rs  types.rs  warmup.rs
crates/token_proxy_core/src/codex/: error.rs  login.rs  mod.rs  oauth.rs  quota.rs  store.rs  types.rs
crates/token_proxy_core/src/kiro/: login.rs  mod.rs  oauth.rs  quota.rs  sso_oidc.rs  store.rs  types.rs  util.rs
crates/token_proxy_core/src/proxy/: account_selector.rs  anthropic_compat.rs  anthropic_compat.test.rs  antigravity_compat.rs  antigravity_compat.test.rs  antigravity_schema.rs  codex_compat.rs  codex_compat.test.rs  compat_content.rs  compat_reason.rs  cooldown_scope.rs  dashboard.rs  dashboard.test.rs  http.rs  http.test.rs  http_client.rs  inbound.rs  log.rs  logs.rs  mod.rs  model.rs  openai.rs  openai_compat.rs  openai_compat.test.part1.rs  openai_compat.test.part2.rs  openai_compat.test.rs  pricing.rs  request_body.rs  request_body.test.rs  request_detail.rs  request_token_estimate.rs  response.rs  response.test.part2.rs  response.test.rs  server.rs  server.test.rs  server_helpers.rs  server_helpers.test.rs  service.rs  service.test.rs  (+11 more)
crates/token_proxy_core/src/proxy/account_selector/: mod.rs  tests.rs
crates/token_proxy_core/src/proxy/anthropic_compat/: request.rs  response.rs  tests.rs  tools.rs
crates/token_proxy_core/src/proxy/antigravity_compat/: claude.rs  claude.test.rs  gemini_fixups.rs  signature_cache.rs
crates/token_proxy_core/src/proxy/antigravity_schema/: ops.rs
crates/token_proxy_core/src/proxy/codex_compat/: headers.rs  mod.rs  request.rs  response.rs  stream.rs  tests.rs  tool_names.rs
crates/token_proxy_core/src/proxy/config/: hot_model_mappings.rs  hot_model_mappings.test.rs  io.rs  io.test.rs  migrate.rs  migrate.test.rs  mod.rs  mod.test.rs  model_mapping.rs  normalize.rs  types.rs  types.test.rs
crates/token_proxy_core/src/proxy/dashboard/: mod.rs  tests.rs
crates/token_proxy_core/src/proxy/gemini_compat/: request.rs  request.test.rs  response.rs  response.test.rs  stream.rs  tools.rs
crates/token_proxy_core/src/proxy/http/: mod.rs  tests.rs
crates/token_proxy_core/src/proxy/kiro/: endpoint.rs  mod.rs  tool_parser.rs  tools.rs  utils.rs
crates/token_proxy_core/src/proxy/openai_compat/: extract.rs  images.rs  input.rs  message.rs  mod.rs  tests.rs  tests_part1.rs  tools.rs  usage.rs
crates/token_proxy_core/src/proxy/request_body/: mod.rs
crates/token_proxy_core/src/proxy/request_token_estimate/: mod.rs
crates/token_proxy_core/src/proxy/response/: anthropic_to_responses.rs  chat_to_responses.rs  kiro_to_responses.rs  mod.rs  streaming.rs  (+8 more)
src-tauri/: Cargo.toml  tauri.conf.dev.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_proxy.rs  client_config.rs  jsonc.rs  lib.rs  logging.rs  main.rs  oauth_util.rs  proxy.rs  tray.rs  window.rs
src-tauri/src/antigravity/: endpoints.rs  ide.rs  login.rs  mod.rs  project.rs  protobuf.rs  quota.rs  quota.test.rs  store.rs  types.rs  warmup.rs
src-tauri/src/codex/: login.rs  mod.rs  quota.rs  store.rs  types.rs
src-tauri/src/commands/: codex.rs  config.rs  dashboard.rs  kiro.rs  logs.rs  mod.rs  providers.rs  proxy.rs
src-tauri/src/kiro/: callback.rs  login.rs  mod.rs  oauth.rs  quota.rs  sso_oidc.rs  store.rs  types.rs  util.rs
src-tauri/src/proxy/: anthropic_compat.rs  antigravity_compat.rs  antigravity_compat.test.rs  codex_compat.rs  compat_content.rs  compat_reason.rs  config.rs  dashboard.rs  gemini.rs  http.rs  http.test.rs  http_client.rs  log.rs  logs.rs  model.rs  openai_compat.rs  request_body.rs  request_body.test.rs  request_detail.rs  request_token_estimate.rs  response.rs  server.rs  server_helpers.rs  service.rs  sqlite.rs  sse.rs  token_estimator.rs  token_rate.rs  upstream.rs  usage.rs
src-tauri/src/proxy/anthropic_compat/: media.rs  request.rs  response.rs  tests.rs  tools.rs
src-tauri/src/proxy/codex_compat/: headers.rs  request.rs  response.rs  tests.rs
src-tauri/src/proxy/config/: io.rs  mod.rs  model_mapping.rs  normalize.rs  types.rs
src-tauri/src/proxy/gemini_compat/: mod.rs  request.rs  request.test.rs  response.rs  response.test.rs
src-tauri/src/proxy/kiro/: endpoint.rs  event_stream.rs  mod.rs  response.rs
src-tauri/src/proxy/openai_compat/: extract.rs  input.rs  message.rs  tests.rs  tools.rs  usage.rs
src-tauri/src/proxy/request_body/: tests.rs
src-tauri/src/proxy/response/: anthropic_to_responses.rs  chat_to_responses.rs  kiro_to_responses_helpers.rs  kiro_to_responses_stream.rs  responses_to_anthropic.rs  responses_to_chat.rs  streaming.rs  tests.rs  token_count.rs  upstream_read.rs  upstream_stream.rs  upstream_stream.test.rs
src-tauri/src/proxy/server/: tests.rs
src-tauri/src/proxy/server_helpers/: tests.rs
src-tauri/src/proxy/upstream/: attempt.rs  kiro_headers.rs  kiro_http.rs  request.rs  request.test.rs  tests.rs  utils.rs
(+233 files in other folders)
