[package]
name = "token_proxy"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "token_proxy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
axum = "0.8.8"
futures-util = "0.3.31"
reqwest = { version = "0.13.1", features = ["json", "stream"] }
tauri = { version = "2.9.5", features = ["image-png", "tray-icon"] }
tauri-plugin-opener = "2.5.3"
tokio = { version = "1.49.0", features = [
    "fs",
    "io-util",
    "net",
    "rt-multi-thread",
    "sync",
    "time",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tiktoken-rs = "0.6.0"
url = "2.5.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[profile.release]
codegen-units = 1
strip = "symbols"
panic = "abort"
opt-level = "s"
