[package]
name = "token_proxy"
version = "0.1.28"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "token_proxy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
axum = "0.8.8"
futures-util = "0.3.31"
base64 = "0.22"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
    "socks",
] }
sha2 = "0.10"
sysinfo = "0.33"
tauri = { version = "2.9.5", features = ["image-png", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-opener = "2.5.3"
tokio = { version = "1.49.0", features = [
    "fs",
    "io-util",
    "net",
    "rt-multi-thread",
    "sync",
    "time",
] }
time = { version = "0.3", features = ["formatting", "parsing"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tiktoken-rs = "0.9.1"
toml_edit = "0.23"
url = "2.5.8"
tracing = { version = "0.1.44", features = ["release_max_level_off"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"

[profile.release]
codegen-units = 1
strip = "symbols"
panic = "abort"
opt-level = "s"
