[package]
name = "token_proxy_core"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.8"
base64 = "0.22"
futures-util = "0.3.32"
rand = "0.10"
reqwest = { version = "0.13", default-features = false, features = [
  "json",
  "stream",
  "form",
  "rustls",
  "socks",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7"
sha2 = "0.10"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
sysinfo = "0.38"
tiktoken-rs = "0.9.1"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1.50.0", features = [
  "fs",
  "io-util",
  "net",
  "rt-multi-thread",
  "sync",
  "time",
] }
toml_edit = "0.25"
tracing = { version = "0.1.44", features = ["release_max_level_off"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "2.5.8"
